charts/gotify/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  namespace: core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gotify.batsworks.com.br
      secretName: gotify-tls
  rules:
    - host: gotify.batsworks.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 80
